Attempt to fix overflow issues

--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 /* Define basic properties of the page */
-body {
-  width: 100%;
-  height: 100%;
+html, body {
+  max-width: 100%;
   overflow-x: hidden !important;
+}
+
+body {
+  /* max-width: 100%;
+  height: 100%;
+  overflow-x: hidden !important; */
   margin: 0;
   font-family: "Raleway", sans-serif;
   color: #fff;
